# home-security

./: .gitignore  README.md  pyproject.toml
home_security/: __init__.py  app.py  models.py  schemas.py
home_security/failed/: 20241226_154521_image0.jpeg.error.txt
home_security/routes/: __init__.py  event_types.py  events.py  images.py
