[tool.poetry]
name = "home-security"
version = "0.1.0"
description = "Home security monitoring system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3.0"
flask-sqlalchemy = "^3.1.0"
flask-marshmallow = "^0.15.0"
marshmallow-sqlalchemy = "^0.29.0"
python-dotenv = "^1.0.0"
mysqlclient = "^2.2.0"
openai = "^1.3.0"
Pillow = "^10.1.0"
APScheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
api = "home_security.app:main"
db-wipe = "scripts.db_wipe:wipe_all"
db-wipe-events = "scripts.db_wipe:wipe_events"
db-wipe-types = "scripts.db_wipe:wipe_event_types"
db-wipe-images = "scripts.db_wipe:wipe_event_images"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
